--- a/Makefile.am
+++ b/Makefile.am
@@ -13,7 +13,7 @@ include_HEADERS = ev.h ev++.h event.h
 
 lib_LTLIBRARIES = libev.la
 
-libev_la_SOURCES = ev.c event.c
+libev_la_SOURCES = ev.c event.c ev_wepoll.c
 libev_la_LDFLAGS = -version-info $(VERSION_INFO)
 
 ev.3: ev.pod
