--- a/Makefile.in
+++ b/Makefile.in
@@ -134,7 +134,7 @@ am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(man3dir)" \
 	"$(DESTDIR)$(includedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libev_la_LIBADD =
-am_libev_la_OBJECTS = ev.lo event.lo ev_wepoll.lo
+am_libev_la_OBJECTS = ev.lo event.lo
 libev_la_OBJECTS = $(am_libev_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -356,7 +356,7 @@ EXTRA_DIST = LICENSE Changes libev.m4 autogen.sh \
 man_MANS = ev.3
 include_HEADERS = ev.h ev++.h event.h
 lib_LTLIBRARIES = libev.la
-libev_la_SOURCES = ev.c event.c ev_wepoll.c
+libev_la_SOURCES = ev.c event.c
 libev_la_LDFLAGS = -version-info $(VERSION_INFO)
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
@@ -457,7 +457,6 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ev.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ev_wepoll.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/event.Plo@am__quote@
 
 .c.o:
